Fix sidepanel on survey on mobile #385

--- a/src/static/src/scss/survey/_side-panel.scss
+++ b/src/static/src/scss/survey/_side-panel.scss
@@ -2,7 +2,17 @@
   &.QuestionOuter {
     padding: 0;
   }
+
+  fieldset {
+    transform: none !important;
+  }
+
+  .dmb-side-panel {
+    background: $h-white;
+  }
 }
+
+
 
 .dmb-body--has-modal {
   overflow: hidden;
